/* Copyright 2012 MaidSafe.net limited

This MaidSafe Software is licensed under the MaidSafe.net Commercial License, version 1.0 or later,
and The General Public License (GPL), version 3. By contributing code to this project You agree to
the terms laid out in the MaidSafe Contributor Agreement, version 1.0, found in the root directory
of this project at LICENSE, COPYING and CONTRIBUTOR respectively and also available at:

http://www.novinet.com/license

Unless required by applicable law or agreed to in writing, software distributed under the License is
distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
implied. See the License for the specific language governing permissions and limitations under the
License.
*/

package maidsafe.vault.protobuf;

message MetadataValue {
  required int32 size = 1;
  optional int64 subscribers = 2;
  repeated bytes online_pmid_name = 3;
  repeated bytes offline_pmid_name = 4;
}

message DataOrProof {
  message Data {
    required uint32 type = 1;
    required bytes name = 2;
    required bytes content = 3;
  }
  message Proof {
    required uint32 type = 1;
    required bytes name = 2;
    required bytes value = 3;
    required int32 size = 4;
  }
  required bytes node_id = 1;
  optional bytes serialised_data = 2;
  required bytes serialised_proof = 3;
  required bytes signature = 4;
}

